--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Do Seu Admirador Não Tão secreto</title>
-    <link rel="stylesheet" href="style.css" />
-
-    <!-- Fonte manuscrita -->
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+        }
+        .mensagem {
+            white-space: pre-line;
+        }
+    </style>
 </head>
 <body>
-
-    <!-- Fundo estrelado -->
-    <div class="stars"></div>
-    <div class="twinkling"></div>
-
-    <!-- Música (YouTube em modo oculto) -->
-    <iframe 
-    style="display:none"
-    src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
-    allow="autoplay">
-</iframe>
-
-    </iframe>
-
-    <!-- Carta -->
     <div class="carta">
-        <h1>Uma carta para você...</h1>
-        <p>
-            (Da primeira vez que eu te vi, te achei incivel logo de cara! como pode em kkk
+        <div class="mensagem">
+Da primeira vez que eu te vi, te achei incivel logo de cara! como pode em kkk
             uma pessoa tão pequena carregar com sigo tanta alegria e ainda conseguir transmitir isso tão bem..
             eu só posso te agradecer, de verdade por e fazer tão bem.
              De longe os meus encontros com você foram os mais intensos e os
@@ -36,9 +15,13 @@
             por todos esses anos kkk, mesmo ainda achando uma loucura a gente mora tão perto e eu não poder te ver,
             se for nescessario eu te busco na faculdade só pra gente voltar junto e você me contar tudo sobre seu dia.
             espero um dia realizar tudo que conversamos, as viagens, as conquistas materiais e até as mais bobas kkk.
-            um beijo espero que goste desse presentinho hehe sou foda)
-        </p>
+            um beijo espero que goste desse presentinho hehe sou foda,
+        </div>
     </div>
-
+    <iframe 
+        style="display:none"
+        src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
+        allow="autoplay">
+    </iframe>
 </body>
 </html>
