--- a/index.html
+++ b/index.html
@@ -1,27 +1,67 @@
-        }
-        .mensagem {
-            white-space: pre-line;
-        }
-    </style>
+<!DOCTYPE html>
+margin-bottom: 20px;
+text-align: center;
+}
+
+
+/* Responsividade */
+@media(max-width: 480px) {
+.mensagem {
+font-size: 1.4rem;
+}
+.titulo {
+font-size: 2rem;
+}
+.carta {
+margin: 80px auto;
+padding: 25px;
+}
+}
+</style>
 </head>
 <body>
-    <div class="carta">
-        <div class="mensagem">
-Da primeira vez que eu te vi, te achei incivel logo de cara! como pode em kkk
-            uma pessoa tão pequena carregar com sigo tanta alegria e ainda conseguir transmitir isso tão bem..
-            eu só posso te agradecer, de verdade por e fazer tão bem.
-             De longe os meus encontros com você foram os mais intensos e os
-            mais inteligentes e sensacionais que eu ja tive na vida. Você é uma mulher maravilhosa. obrigado princesa
-            por todos esses anos kkk, mesmo ainda achando uma loucura a gente mora tão perto e eu não poder te ver,
-            se for nescessario eu te busco na faculdade só pra gente voltar junto e você me contar tudo sobre seu dia.
-            espero um dia realizar tudo que conversamos, as viagens, as conquistas materiais e até as mais bobas kkk.
-            um beijo espero que goste desse presentinho hehe sou foda,
-        </div>
-    </div>
-    <iframe 
-        style="display:none"
-        src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
-        allow="autoplay">
-    </iframe>
+
+
+<!-- Fundo animado -->
+<div class="stars"></div>
+<div class="twinkling"></div>
+
+
+<!-- Carta -->
+<div class="carta">
+<div class="titulo">Uma carta para você...</div>
+<div class="mensagem">
+Da primeira vez que eu te vi, te achei incrível logo de cara! Como pode kkk
+Uma pessoa tão pequena carregar tanta alegria e ainda conseguir transmitir isso tão bem?
+
+
+Só posso te agradecer, de verdade, por me fazer tão bem.
+
+
+De longe, os meus encontros com você foram os mais intensos, inteligentes e sensacionais que eu já tive.
+Você é uma mulher maravilhosa.
+
+
+Obrigado princesa por todos esses anos kkk, mesmo eu achando uma loucura a gente morar tão perto e eu não poder te ver.
+Se for necessário, eu te busco na faculdade só pra voltar com você e ouvir tudo sobre seu dia.
+
+
+Espero um dia realizar tudo o que conversamos: viagens, conquistas materiais e até as ideias mais bobas kkk.
+
+
+Um beijo, espero que goste desse presentinho hehe.
+Sou foda.
+</div>
+</div>
+
+
+<!-- Música oculta -->
+<iframe
+style="display:none"
+src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
+allow="autoplay">
+</iframe>
+
+
 </body>
 </html>
