--- a/index.html
+++ b/index.html
@@ -1,67 +1,96 @@
+<!-- index.html -->
 <!DOCTYPE html>
-margin-bottom: 20px;
-text-align: center;
-}
-
-
-/* Responsividade */
-@media(max-width: 480px) {
-.mensagem {
-font-size: 1.4rem;
-}
-.titulo {
-font-size: 2rem;
-}
-.carta {
-margin: 80px auto;
-padding: 25px;
-}
-}
-</style>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Carta</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
 
-
-<!-- Fundo animado -->
-<div class="stars"></div>
-<div class="twinkling"></div>
-
-
-<!-- Carta -->
-<div class="carta">
-<div class="titulo">Uma carta para você...</div>
-<div class="mensagem">
+    <div class="carta">
+        <div class="mensagem">
 Da primeira vez que eu te vi, te achei incrível logo de cara! Como pode kkk
-Uma pessoa tão pequena carregar tanta alegria e ainda conseguir transmitir isso tão bem?
+Uma pessoa tão pequena carregar tanta alegria e transmitir tudo tão bem...
+Só posso te agradecer de verdade por me fazer tão bem.
 
+De longe, os nossos encontros foram os mais intensos, inteligentes e sensacionais que já tive. Você é uma mulher maravilhosa.
+Obrigado princesa por todos esses anos kkk.
 
-Só posso te agradecer, de verdade, por me fazer tão bem.
+Mesmo achando loucura a gente morar tão perto e eu não poder te ver, se for necessário eu te busco na faculdade só pra gente voltar junto e você me contar tudo sobre seu dia.
 
-
-De longe, os meus encontros com você foram os mais intensos, inteligentes e sensacionais que eu já tive.
-Você é uma mulher maravilhosa.
-
-
-Obrigado princesa por todos esses anos kkk, mesmo eu achando uma loucura a gente morar tão perto e eu não poder te ver.
-Se for necessário, eu te busco na faculdade só pra voltar com você e ouvir tudo sobre seu dia.
-
-
-Espero um dia realizar tudo o que conversamos: viagens, conquistas materiais e até as ideias mais bobas kkk.
-
+Espero um dia realizar tudo o que conversamos: as viagens, as conquistas e até as coisas bobas kkk.
 
 Um beijo, espero que goste desse presentinho hehe.
-Sou foda.
-</div>
-</div>
+        </div>
+    </div>
 
-
-<!-- Música oculta -->
-<iframe
-style="display:none"
-src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
-allow="autoplay">
-</iframe>
-
-
+    <iframe
+        style="display:none"
+        src="https://www.youtube.com/embed/L0yxngUOm5o?autoplay=1&loop=1&playlist=L0yxngUOm5o"
+        allow="autoplay">
+    </iframe>
 </body>
 </html>
+
+
+/* style.css */
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: black;
+    font-family: "Georgia", serif;
+}
+
+/* Fundo de estrelas */
+#stars, #stars2, #stars3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent url('https://raw.githubusercontent.com/joyblob/starbg/main/stars.png') repeat;
+    animation: moveStars 200s linear infinite;
+    z-index: 0;
+}
+#stars2 {
+    animation-duration: 300s;
+    opacity: 0.6;
+}
+#stars3 {
+    animation-duration: 500s;
+    opacity: 0.3;
+}
+
+@keyframes moveStars {
+    from { background-position: 0 0; }
+    to { background-position: -10000px 10000px; }
+}
+
+/* Carta */
+.carta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 450px;
+    background: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 25px rgba(255,255,255,0.2);
+    z-index: 10;
+    line-height: 1.6;
+}
+
+.mensagem {
+    white-space: pre-line;
+    font-size: 1.1rem;
+}
